--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-12 col-12">
                     <div class="single-project-area-one">
                         <a href="project-details.html" class="thumbnail">
-                            <img src="assets/images/portfolio/xuong4.JPG" alt="portfolio">
+                            <img src="assets/images/portfolio/xuong4.jpg" alt="portfolio">
                         </a>
                         <div class="inner-content">
                             <a href="project-details.html">
