--- a/contact.html
+++ b/contact.html
@@ -204,7 +204,7 @@
                                     <a href="#">Về chúng tôi</a>
                                 </li>
                                 <li class="main-nav">
-                                    <a href="#">Blog</a>
+                                    <a href="blog-grid.html">Blog</a>
                                 </li>
                                 <li class="main-nav"><a href="#">Liên hệ</a></li>
                             </ul>
