--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                     <a href="#">Về chúng tôi</a>
                                 </li>
                                 <li class="main-nav">
-                                    <a href="#">Blog</a>
+                                    <a href="blog-grid.html">Blog</a>
                                 </li>
                                 <li class="main-nav"><a href="contact.html">Liên hệ</a></li>
                             </ul>
