--- a/index.html
+++ b/index.html
@@ -417,14 +417,11 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="banner-four-inner-content">
-                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft
-                                            Villages <br>
-                                            Your Global Partner
+                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft Villages
+                                            <br> Your Global Partner
                                         </h1>
                                         <p class="disc" data-i18n="banner.desc">
-                                            We transform wood by-products into smokeless,
-                                            high-heat, eco-friendly fuel.
-                                            Superior quality at direct factory prices.
+                                            We transform wood by-products into smokeless, high-heat, eco-friendly fuel. Superior quality at direct factory prices.
                                         </p>
                                         <div class="button-wrapper">
                                             <a href="contact.html" class="rts-btn btn-primary"
@@ -448,11 +445,11 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="banner-four-inner-content">
-                                        <h1 class="title">Let's Build Future Home <br> Together</h1>
-                                        <p class="disc">
-                                            We are dedicated to building structures that last and relationships that
-                                            endure. With a
-                                            focus on quality, precision, and innovation.
+                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft Villages
+                                            <br> Your Global Partner
+                                        </h1>
+                                        <p class="disc" data-i18n="banner.desc">
+                                            We transform wood by-products into smokeless, high-heat, eco-friendly fuel. Superior quality at direct factory prices.
                                         </p>
                                         <div class="button-wrapper">
                                             <a href="appoinment.html" class="rts-btn btn-primary">Book Appointment <img
@@ -472,11 +469,11 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="banner-four-inner-content">
-                                        <h1 class="title">Let's Build Future Home <br> Together</h1>
-                                        <p class="disc">
-                                            We are dedicated to building structures that last and relationships that
-                                            endure. With a
-                                            focus on quality, precision, and innovation.
+                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft Villages
+                                            <br> Your Global Partner
+                                        </h1>
+                                        <p class="disc" data-i18n="banner.desc">
+                                            We transform wood by-products into smokeless, high-heat, eco-friendly fuel. Superior quality at direct factory prices.
                                         </p>
                                         <div class="button-wrapper">
                                             <a href="appoinment.html" class="rts-btn btn-primary">Book Appointment <img
@@ -496,11 +493,11 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="banner-four-inner-content">
-                                        <h1 class="title">Let's Build Future Home <br> Together</h1>
-                                        <p class="disc">
-                                            We are dedicated to building structures that last and relationships that
-                                            endure. With a
-                                            focus on quality, precision, and innovation.
+                                        <h1 class="title" data-i18n="banner.title">Clean Charcoal from Vietnam's Craft Villages
+                                            <br> Your Global Partner
+                                        </h1>
+                                        <p class="disc" data-i18n="banner.desc">
+                                            We transform wood by-products into smokeless, high-heat, eco-friendly fuel. Superior quality at direct factory prices.
                                         </p>
                                         <div class="button-wrapper">
                                             <a href="appoinment.html" class="rts-btn btn-primary">Book Appointment <img
@@ -565,35 +562,35 @@
                     <div class="about-four-left-wrapper">
                         <h2 class="title" data-i18n="about.title">Sự Khác Biệt <br>
                             Tạo Nên Vị Thế Dẫn Đầu</h2>
-                        <p class="disc" data-i18n="about.desc1">
+                        <p class="disc" data-i18n="about.desc1" style="color: #FFFFFF;">
                             Chủ Động Nguồn Cung & Giá - Kiểm soát 100% mùn cưa từ các làng nghề gỗ, đảm bảo sản lượng
                             800-1,500 tấn/tháng và giá gốc cạnh tranh.
                             Với 15 Năm Kinh Nghiệm - Chúng tôi là bậc thầy trong công nghệ sản xuất than sạch, đảm bảo
                             chất lượng đồng nhất, không pha trộn
                             và đáp ứng mọi yêu cầu khắt khe từ nướng BBQ Trung Đông đến sưởi ấm Châu Âu.
                         </p>
-                        <p class="disc" data-i18n="about.desc2">
+                        <p class="disc" data-i18n="about.desc2" style="color: #FFFFFF;">
                             Giao Hàng Đúng Hẹn: Quy mô lớn, quy trình tối ưu, cam kết tiến độ cho mọi đơn hàng.
                         </p>
                         <div class="counter-area-wrapper-about-4">
                             <div class="single-counter">
-                                <div class="icon">
+                                <!-- <div class="icon">
                                     <img src="assets/images/about/icon/01.svg" alt="about">
-                                </div>
+                                </div> -->
                                 <div class="right-content-wrapper">
-                                    <h2 class="counter title"><span class="odometer" data-count="34">00</span>k+
+                                    <h2 class="counter title"><span style="color: var(--color-primary);" class="odometer" data-count="7500">00</span> <br> kcal/kg <br> ++
                                     </h2>
-                                    <span class="ss" data-i18n="about.counter1">Khách hàng</span>
+                                    <span style="color: #FFFFFF;" class="ss" data-i18n="about.counter1">Excellent quality</span>
                                 </div>
                             </div>
                             <div class="single-counter">
-                                <div class="icon">
+                                <!-- <div class="icon">
                                     <img src="assets/images/about/icon/02.svg" alt="about">
-                                </div>
+                                </div> -->
                                 <div class="right-content-wrapper">
-                                    <h2 class="counter title"><span class="odometer" data-count="8.3">00</span>k+
+                                    <h2 class="counter title"><span style="color: var(--color-primary);" class="odometer" data-count="1300">00</span> <br> tons/month <br> ++
                                     </h2>
-                                    <span class="ss" data-i18n="about.counter2">Dự án thành công</span>
+                                    <span style="color: #FFFFFF;" class="ss" data-i18n="about.counter2">Output production</span>
                                 </div>
                             </div>
                         </div>
